chore(deps): bump dependencies